--- a/sw/device/tests/BUILD
+++ b/sw/device/tests/BUILD
@@ -1377,6 +1377,24 @@ opentitan_functest(
 )
 
 opentitan_functest(
+    name = "rv_core_ibex_address_translation_test",
+    srcs = [
+        "rv_core_ibex_address_translation_test.c",
+        "rv_core_ibex_address_translation_test.S"
+    ],
+    deps = [
+        "//hw/top_earlgrey/sw/autogen:top_earlgrey",
+        "//sw/device/lib/base:memory",
+        "//sw/device/lib/base:mmio",
+        "//sw/device/lib/runtime:log",
+        "//sw/device/lib/runtime:ibex",
+        "//sw/device/lib/testing/test_framework:ottf_main",
+        "//sw/device/lib/testing:flash_ctrl_testutils",
+        "//sw/device/lib/dif:rv_core_ibex"
+    ],
+)
+
+opentitan_functest(
     name = "ast_clk_outs_test",
     srcs = ["ast_clk_outs_test.c"],
     cw310 = cw310_params(
